--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -88,7 +88,7 @@
     width: 1000px;
     height: 400px;;
     padding: 0;
-    margin: 0px;
+    margin: 0 auto;
 }
  
 /*---------------------sub-heading--------------------*/
@@ -116,17 +116,18 @@
 }
 /*---------------------images--------------------*/
 .mamas-pic{
-    width: 700px;
-    height: 700px;
+    width: 565px;
+    height: 600px;
+    
 }
 .contact-info{
     width: 300px;
-    height: 700px;
+    height: 600px;
 }
 
 .gallery{
     width: 100%;
-    padding: 0px;
+    padding-top: 15px;
     margin: 0px;
     background-color: rgb(231, 233, 235);}
 
@@ -139,6 +140,7 @@
     width: 100%;
     margin: 0;
     padding: 0;
+    text-align: center;
 }
 /*-----------------------footer---------------*/
 .social-links{
@@ -196,7 +198,7 @@
    }
    .mamas-pic{
        width: 100%;
-       height: 540px;
+       height: 530px;
    }
    .contact-info{
        width: 100%;
@@ -223,7 +225,7 @@
    }
    .mamas-pic{
      width: 96vw;
-      height: 495px;
+      height: 475px;
    }
 
    .contact-info{
@@ -241,11 +243,11 @@
   } 
    .logo-image{
                width: 100%; 
-               height: 270px;  
+               height: 243px;  
    }
    .mamas-pic{
        width: 95vw;
-       height: 424px;
+       height: 390px;
 }
    
    .contact-info{
