--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -112,7 +112,7 @@
     width: 100%;
     padding: 0;
     margin: 0;
-    background-color: rgb(231, 233, 235);
+    background-color: rgb(231, 233, 235);}
 }
 /*---------------------images--------------------*/
 .mamas-pic{
@@ -146,7 +146,7 @@
 .social-links{
     padding: 20px;
     text-align: center;
-    background-color: rgb(104, 150, 99);
+    background-color: rgba(65, 173, 119, 0.644);
     margin: 0px auto;
     width: 100%;
 }
