--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -108,7 +108,7 @@ body{
     padding-bottom: 25px;
     width: 100%;
     margin: 0px;
-    font-size: 1.0rem;
+    font-size: 1.5rem;
 }
 
 .img-contact-info{
@@ -120,8 +120,9 @@ body{
 /*---------------------images--------------------*/
 
 .contact-info{
+    padding-top: 15px;
     width: 300px;
-    height: 600px;
+    height: 700px;
 }
 
 .gallery{
@@ -132,7 +133,7 @@ body{
 
 .sub-images{
     width: 23vw;
-    height: 233px;           
+    height: 225px;           
 }
 
 .image-logo{
@@ -142,7 +143,7 @@ body{
     text-align: center;
 }
 .mamas-pic{
-    height: 600px;
+    height: 700px;
     width: 578px;
 }
 /*-----------------------footer---------------*/
@@ -205,7 +206,7 @@ body{
    }
    .contact-info{
        width: 100%;
-        height: 540px;
+        height: 537px;
    }
    .gallery{
        width: 100%;
