--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -30,11 +30,12 @@ body{
         margin: 0px;
         text-align: center;
     }
+
 .head-er{
     padding: 0;
     margin: 0;
     width: 100%;
-    background-color: rgb(231, 241, 250);
+    background-color: rgb(160, 226, 182);
     padding-top: 75px;
     padding-bottom: 25px;
     text-align: center;
@@ -79,20 +80,13 @@ body{
      
 }
 
-/*-----------------------hover.css-------------*/
+/*-----------------------hover-effect-------------*/
 
 .hvr-rectangle-out:before {
     background-color: rgb(233, 183, 179);
 }
 
-/*-----------------------Image1-------------*/
-.logo-image{
-    width: 1000px;
-    height: 400px;;
-    padding: 0;
-    margin: 0 auto;
-}
- 
+
 /*---------------------sub-heading--------------------*/
 .sub-logo{
        margin: 0px auto;
@@ -107,31 +101,39 @@ body{
     padding-bottom: 25px;
     width: 100%;
     margin: 0px;
-    font-size: 1.0rem;
+    font-size: 1.2rem;
 }
 
-.img-contact-info{
-    width: 100%;
-    padding: 0;
-    margin: 0;
-    background-color: rgb(231, 233, 235);
-}
-/*---------------------images--------------------*/
+/*---------------------contact-information--------------------*/
 
 .contact-info{
+    padding-top: 15px;
     width: 300px;
-    height: 600px;
+    height: 700px;
 }
+
+/*---------------------images--------------------*/
+.img-contact-info{
+    width: 100%;
+    padding-bottom: 25px;
+    margin: 0;
+    background-color: rgb(231, 233, 235);}
 
 .gallery{
     width: 100%;
-    padding-top: 15px;
+    padding: 0px;
     margin: 0px;
     background-color: rgb(231, 233, 235);}
 
 .sub-images{
     width: 23vw;
-    height: 250px;           
+    height: 300px;           
+}
+.logo-image{
+    width: 1000px;
+    height: 400px;;
+    padding: 0;
+    margin: 0;
 }
 
 .image-logo{
@@ -141,14 +143,14 @@ body{
     text-align: center;
 }
 .mamas-pic{
-    height: 600px;
+    height: 700px;
     width: 578px;
 }
 /*-----------------------footer---------------*/
 .social-links{
     padding: 20px;
     text-align: center;
-    background-color: rgba(65, 173, 119, 0.644);
+    background-color: rgb(160, 226, 182);
     margin: 0px auto;
     width: 100%;
 }
@@ -167,7 +169,7 @@ body{
     color: #fafafa;
     line-height: 7px;
     text-align: center;
-    background-color: rgb(19, 17, 2);
+    background-color: rgb(5, 32, 6);
     transition: all 0.35s ease-in-out;
     -moz-transition: all 0.35s ease-in-out;
     -webkit-transition: all 0.35s ease-in-out;
@@ -204,7 +206,7 @@ body{
    }
    .contact-info{
        width: 100%;
-        height: 540px;
+        height: 537px;
    }
    .gallery{
        width: 100%;
@@ -235,6 +237,7 @@ body{
    }
    .sub-images{
        width: 96vw;
+       height: 276px;
    }
   }
 
@@ -257,5 +260,6 @@ body{
    }
    .sub-images{
               width: 95vw;
+             height: 276px;
    }
   }
